<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/activity_detail_image1"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        app:srcCompat="@drawable/fife_ip_malopolska_long" />

    <TextView
        android:id="@+id/activity_summary_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_detail_image1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/activity_summary_text1" />


    <TextView
        android:id="@+id/activity_summary_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_summary_text1"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:text="@string/activity_summary_text2" />


    <TextView
        android:id="@+id/activity_summary_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_summary_text2"
        android:layout_marginTop="100dp"
        android:text="@string/activity_summary_text3" />

    <Button
        android:id="@+id/activity_summary_buton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_summary_text3"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:text="@string/activity_summary_buton1" />

    <Button
        android:id="@+id/activity_summary_buton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_summary_buton1"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:text="@string/activity_summary_buton2" />
</RelativeLayout>
