<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <RelativeLayout
        android:id="@+id/relative_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/image_view_welcome_report_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_report_problem_24dp" />

        <TextView
            android:id="@+id/text_view_welcome_report_problem"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:gravity="center"
            android:layout_toRightOf="@+id/image_view_welcome_report_problem"
            android:layout_toEndOf="@+id/image_view_welcome_report_problem"
            android:text="@string/some_id"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_view_welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/relative_welcome"
        android:text="@string/welcome_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_view_welcome_text_advice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_text_advice"
        android:layout_below="@+id/text_view_welcome_text"
        android:textStyle="bold"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/image_view_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/ic_sentiment_dissatisfied_black_24dp"
        android:layout_below="@+id/text_view_welcome_text_advice" />

    <fragment
        android:id="@+id/accidence_fragment"
        android:name="com.qubit.kpt.mobile.ui.fragments.AccidenceFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_welcome_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:focusable="true"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_add_black_24dp"
        app:fabSize = "normal"
        app:backgroundTint="@color/cardview_light_background" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shadow_button">

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:id="@+id/button_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/mapa"
            android:textColor="@color/cardview_dark_background"
            app:icon="@drawable/ic_map_black_24dp"
            app:iconTint="@color/cardview_dark_background" />

    </RelativeLayout>

</RelativeLayout>