<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/activity_list_image1"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        app:srcCompat="@drawable/fife_ip_malopolska_long" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_list_image1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_main_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_main_button1" />

        <Button
            android:id="@+id/activity_main_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_main_button2" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_marginTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/activity_list_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_list_text1"
            android:textSize="20dp"
            android:textStyle="bold">

        </TextView>


        <TableRow
            android:background="#51B435"
            android:padding="10dp">

            <TextView
                android:id="@+id/activity_list_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_list_text2" />

            <TextView
                android:id="@+id/activity_list_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_list_text3" />

            <TextView
                android:id="@+id/activity_list_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_list_text4" />

            <TextView
                android:id="@+id/buttonDetails4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_list_text5" />
        </TableRow>

        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">

            <TextView
                android:id="@+id/activity_list_text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/activity_list_text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <ImageView
                android:id="@+id/activity_list_image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/level1" />

            <Button
                android:id="@+id/buttonDetails5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_list_text5" />
        </TableRow>

        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">

            <TextView
                android:id="@+id/activity_list_text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/activity_list_text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <ImageView
                android:id="@+id/activity_list_image3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/level2" />

            <Button
                android:id="@+id/activity_list_text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_list_text5" />

        </TableRow>

        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">

            <TextView
                android:id="@+id/activity_list_text10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/activity_list_text11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <ImageView
                android:id="@+id/activity_list_image4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/level3" />

            <Button
                android:id="@+id/buttonDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_list_text5" />

        </TableRow>

        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">

            <TextView
                android:id="@+id/activity_list_text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/activity_list_text13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <ImageView
                android:id="@+id/activity_list_image5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/level4" />

            <Button
                android:id="@+id/buttonDetails2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_list_text5" />

        </TableRow>

        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">

            <TextView
                android:id="@+id/activity_list_text14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/activity_list_text15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <ImageView
                android:id="@+id/activity_list_image6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/level1" />

            <Button
                android:id="@+id/buttonDetails3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_list_text5" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/activity_main_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tab"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="14dp"
        android:layout_weight="1"
        android:text="@string/activity_main_button3" />
</RelativeLayout>
