<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    app:cardCornerRadius="8dp">

    <View
        android:id="@+id/viewColor"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/accidentPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:gravity="start"
                    android:text="@string/accidentPlaceDefault"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/accidentTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_toEndOf="@+id/accidentPlace"
                    android:layout_toRightOf="@+id/accidentPlace"
                    android:gravity="end"
                    android:text="@string/accidenceDefault"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="12sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/accidentDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_toStartOf="@+id/accidentDistance"
                    android:layout_toLeftOf="@+id/accidentDistance"
                    android:gravity="start"
                    android:text="@string/accidentDescriptionDefault"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/accidentDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:gravity="end"
                    android:text="@string/accidentDistanceDefault"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="24sp" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

